--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,17 @@ buildscript {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
 
+//apply plugin: 'java'
+apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'groovy'
 /*
 // for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
 plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-archivesBaseName = "TMT_MOD"
+archivesBaseName = "Military_Science"
 group 'spacebuilder2020'
 version '0.1-SNAPSHOT'
 
@@ -40,6 +42,10 @@ minecraft {
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20160518"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+}
+
+repositories {
+    mavenCentral()
 }
 
 dependencies {
@@ -89,7 +95,3 @@ processResources
         }
 
 
-
-repositories {
-    mavenCentral()
-}
