--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ minecraft {
 
 repositories {
     mavenCentral()
+    maven {
+
+        url 'http://maven.epoxide.xyz'
+    }
 }
 
 dependencies {
@@ -71,6 +75,8 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
+
+    compile "net.darkhax.tesla:Tesla:1.10.2-1.2.1.42"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
